--- a/index.html
+++ b/index.html
@@ -12,9 +12,34 @@
   </style>
 </head>
 <body>
-  Features
-  Team
-  Sign In
+
+  <header>
+    <nav class="nav">
+      <img src="images/logo.svg" alt="logo">
+
+      <ul class="menu-nav">
+        <li class="menu-nav__item">
+          <a href="#" class="link">Features</a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="#" class="link">Team</a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="#" class="link">Sign In</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <div class="container">
+      <img src="images/illustration-intro.png" alt="illustration-intro">
+
+      <div class="texts">
+        <h3>All your files in one secure location, accessible anywhere.</h3>
+      </div>
+    </div>
+  </section>
 
   All your files in one secure location, accessible anywhere.
 
