--- a/index.html
+++ b/index.html
@@ -1,123 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>
-      Frontend Mentor | Fylo landing page with dark theme and features grid
-    </title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav class="nav">
-        <img src="images/logo.svg" alt="logo" />
 
-        <ul class="menu-nav">
-          <li class="menu-nav__item">
-            <a href="#" class="link">Features</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="#" class="link">Team</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="#" class="link">Sign In</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/main.css" />
+  <title>
+    Frontend Mentor | Fylo landing page with dark theme and features grid
+  </title>
+</head>
 
-    <section>
-      <div class="container">
-        <img src="images/illustration-intro.png" alt="illustration-intro" />
+<body>
+  <header>
+    <nav class="nav">
+      <img src="images/logo.svg" alt="logo" />
 
+      <ul class="menu-nav">
+        <li class="menu-nav__item">
+          <a href="#" class="link">Features</a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="#" class="link">Team</a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="#" class="link">Sign In</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <div class="container">
+      <img src="images/illustration-intro.png" alt="illustration-intro" />
+
+      <div class="texts">
+        <h3>
+          All your files in one secure location, <br />
+          accessible anywhere.
+        </h3>
+        <p>
+          Fylo stores all your most important files in one secure location.
+          <br />
+          Access them wherever you need, share and collaborate with <br />
+          friends family, and co-workers.
+        </p>
+        <button>Get Started</button>
+      </div>
+    </div>
+  </section>
+
+  <div>
+    <div class="articles">
+      <div class="articles__list">
+        <img src="images/icon-access-anywhere.svg" alt="access" />
         <div class="texts">
-          <h3>
-            All your files in one secure location, <br />
-            accessible anywhere.
-          </h3>
+          <h6>Access your files, anywhere</h6>
           <p>
-            Fylo stores all your most important files in one secure location.
-            <br />
-            Access them wherever you need, share and collaborate with <br />
-            friends family, and co-workers.
+            The ability to use a smartphone, tablet, or computer to access
+            your account means your files follow you everywhere.
           </p>
-          <button>Get Started</button>
         </div>
       </div>
-    </section>
 
-    <div>
-      <div class="articles">
-        <div class="articles__list">
-          <img src="images/icon-access-anywhere.svg" alt="access" />
-          <div class="texts">
-            <h6>Access your files, anywhere</h6>
-            <p>
-              The ability to use a smartphone, tablet, or computer to access
-              your account means your files follow you everywhere.
-            </p>
-          </div>
+      <div class="articles__list">
+        <img src="images/icon-security.svg" alt="security" />
+        <div class="texts">
+          <h6>Security you can trust</h6>
+          <p>
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your
+            files.
+          </p>
         </div>
+      </div>
 
-        <div class="articles__list">
-          <img src="images/icon-security.svg" alt="security" />
-          <div class="texts">
-            <h6>Security you can trust</h6>
-            <p>
-              2-factor authentication and user-controlled encryption are just a
-              couple of the security features we allow to help secure your
-              files.
-            </p>
-          </div>
+      <div class="articles__list">
+        <img src="images/icon-collaboration.svg" alt="collaboration" />
+        <div class="texts">
+          <h6>Real-time collaboration</h6>
+          <p>
+            Securely share files and folders with friends, family and
+            colleagues for live collaboration. No email attachments required.
+          </p>
         </div>
+      </div>
 
-        <div class="articles__list">
-          <img src="images/icon-collaboration.svg" alt="collaboration" />
-          <div class="texts">
-            <h6>Real-time collaboration</h6>
-            <p>
-              Securely share files and folders with friends, family and
-              colleagues for live collaboration. No email attachments required.
-            </p>
-          </div>
-        </div>
-
-        <div class="articles__list">
-          <img src="images/icon-any-file.svg" alt="any file" />
-          <div class="texts">
-            <h6>Store any type of file</h6>
-            <p>
-              Whether you're sharing holidays photos or work documents, Fylo has
-              you covered allowing for all file types to be securely stored and
-              shared.
-            </p>
-          </div>
+      <div class="articles__list">
+        <img src="images/icon-any-file.svg" alt="any file" />
+        <div class="texts">
+          <h6>Store any type of file</h6>
+          <p>
+            Whether you're sharing holidays photos or work documents, Fylo has
+            you covered allowing for all file types to be securely stored and
+            shared.
+          </p>
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="main">
     <div class="productive">
-      <img class="prod"
-        src="images/illustration-stay-productive.png"
-        alt="illustration-intro"
-      />
+      <img class="prod" src="images/illustration-stay-productive.png" alt="illustration-intro" />
 
       <div class="texts">
         <h3>
@@ -138,27 +124,128 @@
       </div>
     </div>
 
-    Fylo has improved our team productivity by an order of magnitude. Since
-    making the switch our team has become a well-oiled collaboration machine.
-    Satish Patel Founder & CEO, Huddle Fylo has improved our team productivity
-    by an order of magnitude. Since making the switch our team has become a
-    well-oiled collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo
-    has improved our team productivity by an order of magnitude. Since making
-    the switch our team has become a well-oiled collaboration machine. Iva Boyd
-    Founder & CEO, Huddle Get early access today It only takes a minute to sign
-    up and our free starter tier is extremely generous. If you have any
-    questions, our support team would be happy to help you. Get Started For Free
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
+    <div class="testimonial">
+      <div class="test_profile">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="profile">
+          <img src="images/profile-1.jpg" alt="profile-1" />
+          <div class="names">
+            <h6>Satish Patel</h6>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
 
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded with 💕💖 by <a href="#">Obi Zim</a>.
-      </p>
-    </footer>
-  </body>
+      <div class="test_profile">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+
+        <div class="profile">
+          <img src="images/profile-2.jpg" alt="profile-2" />
+          <div class="names">
+            <h6>Bruce McKenzie</h6>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="test_profile">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+
+        <div class="profile">
+          <img src="images/profile-3.jpg" alt="profile-3" />
+          <div class="names">
+            <h6>Iva Boyd</h6>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="access">
+    <h1>Get early access today</h1>
+    <p>It only
+      takes a minute to sign up and our free starter tier is extremely generous.
+      If you have any questions, our support team would be happy to help you.</p>
+    <div class="btn">
+      <input placeholder="example@fylo.com" type="email" name="email" id="email">
+      <button>Get Started For Free</button>
+    </div>
+  </div>
+
+  <footer>
+    <div class="footer">
+      <div class="footer_list">
+        <img id="logo" src="images/logo.svg" alt="logo">
+        <div class="foot">
+          <img src="images/icon-location.svg" alt="location">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+        </div>
+      </div>
+
+      <div class="footer_list">
+        <div class="foot">
+          <img src="images/icon-phone.svg" alt="icon-phone">
+          <p>+1-543-123-4567</p>
+        </div>
+        <div class="foot">
+          <img src="images/icon-email.svg" alt="icon-email">
+          <p>example@fylo.com</p>
+        </div>
+      </div>
+
+      <div class="footer_list">
+        <div class="foot">
+          <ul>
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </ul>
+          <ul>
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer_list">
+        <a href="#!">
+          <i class="fab fa-facebook fa-2x"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter fa-2x"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
+      </div>
+
+    </div>
+    </div>
+
+    <p class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded with 💕💖 by <a
+        href="#">Obi Zim</a>.
+    </p>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/c26c889684.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
