--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="texts">
         <h3>
-          All your files in one secure location, <br />
+          All your files in one secure location,
           accessible anywhere.
         </h3>
         <p>
@@ -174,7 +174,7 @@
     </div>
   </div>
 
-  <div class="access">
+  <!-- <div class="access">
     <h1>Get early access today</h1>
     <p>It only
       takes a minute to sign up and our free starter tier is extremely generous.
@@ -183,7 +183,7 @@
       <input placeholder="example@fylo.com" type="email" name="email" id="email">
       <button>Get Started For Free</button>
     </div>
-  </div>
+  </div> -->
 
   <footer>
     <div class="footer">
