--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <link rel="stylesheet" href="css/main.css" />
+  <script src="https://kit.fontawesome.com/c26c889684.js" crossorigin="anonymous"></script>
   <title>
     Frontend Mentor | Fylo landing page with dark theme and features grid
   </title>
@@ -174,7 +174,7 @@
     </div>
   </div>
 
-  <!-- <div class="access">
+  <div class="access">
     <h1>Get early access today</h1>
     <p>It only
       takes a minute to sign up and our free starter tier is extremely generous.
@@ -183,7 +183,7 @@
       <input placeholder="example@fylo.com" type="email" name="email" id="email">
       <button>Get Started For Free</button>
     </div>
-  </div> -->
+  </div>
 
   <footer>
     <div class="footer">
@@ -244,8 +244,6 @@
         href="#">Obi Zim</a>.
     </p>
   </footer>
-
-  <script src="https://kit.fontawesome.com/c26c889684.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
