768px media query

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       </div>
 
       <div class="footer_list">
-        <div class="foot">
+        <div class="ul">
           <ul>
             <li>About Us</li>
             <li>Jobs</li>
@@ -224,15 +224,17 @@
       </div>
 
       <div class="footer_list">
-        <a href="#!">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
+        <div class="foot">
+          <a href="#!">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-instagram fa-2x"></i>
+          </a>
+        </div>
       </div>
 
     </div>
