--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     </div>
   </div>
 
+  <div class="accessbg">
   <div class="access">
     <h1>Get early access today</h1>
     <p>It only
@@ -183,6 +184,7 @@
       <input placeholder="example@fylo.com" type="email" name="email" id="email">
       <button>Get Started For Free</button>
     </div>
+  </div>
   </div>
 
   <footer>
