--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css" />
-  <script src="https://kit.fontawesome.com/c26c889684.js" crossorigin="anonymous"></script>
   <title>
     Frontend Mentor | Fylo landing page with dark theme and features grid
   </title>
@@ -19,13 +19,13 @@
 
       <ul class="menu-nav">
         <li class="menu-nav__item">
-          <a href="#" class="link">Features</a>
+          <a href="#features" class="link">Features</a>
         </li>
         <li class="menu-nav__item">
-          <a href="#" class="link">Team</a>
+          <a href="#team" class="link">Team</a>
         </li>
         <li class="menu-nav__item">
-          <a href="#" class="link">Sign In</a>
+          <a href="#signin" class="link">Sign In</a>
         </li>
       </ul>
     </nav>
@@ -37,12 +37,11 @@
 
       <div class="texts">
         <h3>
-          All your files in one secure location,
+          All your files in one secure location, <br>
           accessible anywhere.
         </h3>
         <p>
           Fylo stores all your most important files in one secure location.
-          <br />
           Access them wherever you need, share and collaborate with <br />
           friends family, and co-workers.
         </p>
@@ -52,7 +51,7 @@
   </section>
 
   <div>
-    <div class="articles">
+    <div id="features" class="articles">
       <div class="articles__list">
         <img src="images/icon-access-anywhere.svg" alt="access" />
         <div class="texts">
@@ -112,8 +111,6 @@
         <p>
           Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.
-        </p>
-        <p>
           Securely share files and folders with friends, family and colleagues
           for live collaboration. No email attachments required.
         </p>
@@ -124,7 +121,7 @@
       </div>
     </div>
 
-    <div class="testimonial">
+    <div id="team" class="testimonial">
       <div class="test_profile">
         <p>
           Fylo has improved our team productivity by an order of magnitude.
@@ -174,17 +171,17 @@
     </div>
   </div>
 
-  <div class="accessbg">
-  <div class="access">
-    <h1>Get early access today</h1>
-    <p>It only
-      takes a minute to sign up and our free starter tier is extremely generous.
-      If you have any questions, our support team would be happy to help you.</p>
-    <div class="btn">
-      <input placeholder="example@fylo.com" type="email" name="email" id="email">
-      <button>Get Started For Free</button>
+  <div id="signin" class="accessbg">
+    <div class="access">
+      <h1>Get early access today</h1>
+      <p>It only
+        takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.</p>
+      <div class="btn">
+        <input placeholder="example@fylo.com" type="email" name="email" id="email">
+        <button>Get Started For Free</button>
+      </div>
     </div>
-  </div>
   </div>
 
   <footer>
@@ -228,13 +225,13 @@
       <div class="footer_list">
         <div class="foot">
           <a href="#!">
-            <i class="fab fa-facebook fa-2x"></i>
+            <i class="fa fa-facebook"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fa fa-twitter"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram fa-2x"></i>
+            <i class="fa fa-instagram"></i>
           </a>
         </div>
       </div>
